[package]
name = "exrmips1"
version = "0.1.0"
edition = "2021"
description = "MIPS32R2 simulator"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "0.4"
simplelog = "^0.12.2"

# [target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.84"
js-sys = { version="0.3" }
web-sys = { version="0.3.44", features=["Window", "console"] }
wasm-bindgen-futures = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }


[target.'cfg(not(target_family = "wasm"))'.dependencies]
termion = "*"
clap = { version="4.5", features = ["cargo"] }


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
